--- a/WinReport/WinReport.csproj
+++ b/WinReport/WinReport.csproj
@@ -72,6 +72,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataTableOrnek.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DataTableOrnek.Designer.cs">
+      <DependentUpon>DataTableOrnek.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +86,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SatisRaporu.cs" />
+    <EmbeddedResource Include="DataTableOrnek.resx">
+      <DependentUpon>DataTableOrnek.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
